--- a/notebooks/02_learners_api_examples.ipynb
+++ b/notebooks/02_learners_api_examples.ipynb
@@ -24,17 +24,30 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "f6c3fc32-efa6-4238-a6f6-7e84aed4973d",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-29T01:28:17.375993Z",
+     "iopub.status.busy": "2024-02-29T01:28:17.374464Z",
+     "iopub.status.idle": "2024-02-29T01:28:20.155671Z",
+     "shell.execute_reply": "2024-02-29T01:28:20.154927Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "capymoa_root: /Users/gomeshe/Dropbox/ciencia_computacao/dev/main-projects/CapyMOA/src/capymoa\n",
-      "MOA jar path location (config.ini): /Users/gomeshe/Dropbox/ciencia_computacao/dev/main-projects/CapyMOA/src/capymoa/jar/moa.jar\n",
+      "capymoa_root: /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa\n",
+      "MOA jar path location (config.ini): /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa/jar/moa.jar\n",
       "JVM Location (system): \n",
-      "JAVA_HOME: /Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
-      "JVM args: ['-Xmx8g', '-Xss10M']\n",
+      "JAVA_HOME: /usr/lib/jvm/java-17-openjdk\n",
+      "JVM args: ['-Xmx8g', '-Xss10M']\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Sucessfully started the JVM and added MOA jar to the class path\n"
      ]
     }
@@ -77,7 +90,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "626a36be-58e2-41e2-81fe-8f5b31bd375b",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-29T01:28:20.158300Z",
+     "iopub.status.busy": "2024-02-29T01:28:20.158030Z",
+     "iopub.status.idle": "2024-02-29T01:28:25.328851Z",
+     "shell.execute_reply": "2024-02-29T01:28:25.328099Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -202,8 +222,8 @@
     "    instance = stream.next_instance()\n",
     "\n",
     "    prediction = learner.predict(instance)\n",
-    "    evaluator_TTT.update(instance.y(), prediction)\n",
-    "    evaluator_windowed.update(instance.y(), prediction)\n",
+    "    evaluator_TTT.update(instance.y_value, prediction)\n",
+    "    evaluator_windowed.update(instance.y_value, prediction)\n",
     "    learner.train(instance)\n",
     "    \n",
     "    instancesProcessed += 1\n",
@@ -225,7 +245,14 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "00b77830-c8f9-4bae-8d7e-bf064900b806",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-29T01:28:25.472283Z",
+     "iopub.status.busy": "2024-02-29T01:28:25.472058Z",
+     "iopub.status.idle": "2024-02-29T01:28:29.078980Z",
+     "shell.execute_reply": "2024-02-29T01:28:29.078323Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -434,8 +461,8 @@
     "    prediction = learner.predict(instance)\n",
     "\n",
     "    # evaluator.addResult(instance, prediction)\n",
-    "    evaluator_TTT.update(instance.y(),prediction)\n",
-    "    evaluator_windowed.update(instance.y(),prediction)\n",
+    "    evaluator_TTT.update(instance.y_label,prediction)\n",
+    "    evaluator_windowed.update(instance.y_label,prediction)\n",
     "    learner.train(instance)\n",
     "    \n",
     "    instancesProcessed += 1\n",
@@ -458,7 +485,14 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "9f202299-317d-45db-a62d-747769a958a8",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-29T01:28:29.082807Z",
+     "iopub.status.busy": "2024-02-29T01:28:29.082211Z",
+     "iopub.status.idle": "2024-02-29T01:28:30.223339Z",
+     "shell.execute_reply": "2024-02-29T01:28:30.222728Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -920,7 +954,14 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "00a39c4f-0998-4783-a791-9d76ae75fe59",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-29T01:28:30.228077Z",
+     "iopub.status.busy": "2024-02-29T01:28:30.227846Z",
+     "iopub.status.idle": "2024-02-29T01:28:30.339989Z",
+     "shell.execute_reply": "2024-02-29T01:28:30.339411Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1319,7 +1360,7 @@
     }
    ],
    "source": [
-    "from capymoa.stream import Instance\n",
+    "from capymoa.stream.instance import _JavaLabeledInstance\n",
     "\n",
     "rtg = MOA_RTG()\n",
     "# Setting parameters using setViaCLIString\n",
@@ -1337,11 +1378,11 @@
     "maxInstancesToProcess = 1000\n",
     "instancesProcessed = 1\n",
     "while rtg.hasMoreInstances() and instancesProcessed <= maxInstancesToProcess:\n",
-    "    instance = Instance(Schema(moa_header=rtg.getHeader()), rtg.nextInstance())\n",
+    "    instance = _JavaLabeledInstance(Schema(moa_header=rtg.getHeader()), rtg.nextInstance())\n",
     "    prediction = learner.predict(instance)\n",
     "    \n",
-    "    evaluator.update(instance.y(), prediction)\n",
-    "    evaluator_TTT.update(instance.y(), prediction)\n",
+    "    evaluator.update(instance.y_label, prediction)\n",
+    "    evaluator_TTT.update(instance.y_label, prediction)\n",
     "    \n",
     "    learner.train(instance)\n",
     "    instancesProcessed += 1\n",
@@ -1363,7 +1404,14 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "817d2b5d-0ae2-4e8f-8cd2-03d3d5291f53",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-29T01:28:30.343124Z",
+     "iopub.status.busy": "2024-02-29T01:28:30.342900Z",
+     "iopub.status.idle": "2024-02-29T01:28:30.569746Z",
+     "shell.execute_reply": "2024-02-29T01:28:30.567069Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1747,11 +1795,11 @@
     "maxInstancesToProcess = 1000\n",
     "instancesProcessed = 1\n",
     "while rtg.hasMoreInstances() and instancesProcessed <= maxInstancesToProcess:\n",
-    "    instance = Instance(schema, rtg.nextInstance())\n",
+    "    instance = _JavaLabeledInstance(schema, rtg.nextInstance())\n",
     "    prediction = learner.predict(instance)\n",
     "    \n",
-    "    evaluator.update(instance.y(), prediction)\n",
-    "    evaluator_TTT.update(instance.y(), prediction)\n",
+    "    evaluator.update(instance.y_label, prediction)\n",
+    "    evaluator_TTT.update(instance.y_label, prediction)\n",
     "    \n",
     "    learner.train(instance)\n",
     "    instancesProcessed += 1\n",
@@ -1773,7 +1821,14 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "32892084-c0a3-430c-8df2-4d92dee1d544",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-29T01:28:30.573996Z",
+     "iopub.status.busy": "2024-02-29T01:28:30.573765Z",
+     "iopub.status.idle": "2024-02-29T01:28:30.775398Z",
+     "shell.execute_reply": "2024-02-29T01:28:30.774788Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2160,11 +2215,11 @@
     "maxInstancesToProcess = 1000\n",
     "instancesProcessed = 1\n",
     "while rtg.hasMoreInstances() and instancesProcessed <= maxInstancesToProcess:\n",
-    "    instance = Instance(schema, rtg.nextInstance())\n",
+    "    instance = _JavaLabeledInstance(schema, rtg.nextInstance())\n",
     "    prediction = learner.predict(instance)\n",
     "    \n",
-    "    evaluator.update(instance.y(), prediction)\n",
-    "    evaluator_TTT.update(instance.y(), prediction)\n",
+    "    evaluator.update(instance.y_label, prediction)\n",
+    "    evaluator_TTT.update(instance.y_label, prediction)\n",
     "    \n",
     "    learner.train(instance)\n",
     "    instancesProcessed += 1\n",
@@ -2188,7 +2243,14 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "1e7a3122-ee31-467a-86b6-4c90e4f82dde",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-29T01:28:30.778254Z",
+     "iopub.status.busy": "2024-02-29T01:28:30.778016Z",
+     "iopub.status.idle": "2024-02-29T01:28:30.982963Z",
+     "shell.execute_reply": "2024-02-29T01:28:30.976853Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2574,11 +2636,11 @@
     "maxInstancesToProcess = 1000\n",
     "instancesProcessed = 1\n",
     "while rtg.hasMoreInstances() and instancesProcessed <= maxInstancesToProcess:\n",
-    "    instance = Instance(schema, rtg.nextInstance())\n",
+    "    instance = _JavaLabeledInstance(schema, rtg.nextInstance())\n",
     "    prediction = learner.predict(instance)\n",
     "    \n",
-    "    evaluator.update(instance.y(), prediction)\n",
-    "    evaluator_TTT.update(instance.y(), prediction)\n",
+    "    evaluator.update(instance.y_label, prediction)\n",
+    "    evaluator_TTT.update(instance.y_label, prediction)\n",
     "    \n",
     "    learner.train(instance)\n",
     "    instancesProcessed += 1\n",
@@ -2609,7 +2671,14 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "499f5773-e0c0-4eb2-80c8-4fdf727df875",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-29T01:28:30.986365Z",
+     "iopub.status.busy": "2024-02-29T01:28:30.985746Z",
+     "iopub.status.idle": "2024-02-29T01:28:32.132190Z",
+     "shell.execute_reply": "2024-02-29T01:28:32.131369Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2769,7 +2838,14 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "50c485e0-d32c-4665-b544-70f4a942d9ca",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-29T01:28:32.134853Z",
+     "iopub.status.busy": "2024-02-29T01:28:32.134476Z",
+     "iopub.status.idle": "2024-02-29T01:28:34.202113Z",
+     "shell.execute_reply": "2024-02-29T01:28:34.201422Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2797,7 +2873,7 @@
     "\n",
     "    prediction = learner.predict(instance)\n",
     "\n",
-    "    evaluator.update(instance.y(), prediction)\n",
+    "    evaluator.update(instance.y_value, prediction)\n",
     "    learner.train(instance)\n",
     "\n",
     "    instanceProcessed += 1\n",
@@ -2818,7 +2894,14 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "9bbaa729-58db-4cb2-ade2-daf216c7be7c",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-29T01:28:34.207169Z",
+     "iopub.status.busy": "2024-02-29T01:28:34.206821Z",
+     "iopub.status.idle": "2024-02-29T01:28:36.050395Z",
+     "shell.execute_reply": "2024-02-29T01:28:36.049714Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2950,8 +3033,8 @@
     "\n",
     "    prediction = learner.predict(instance)\n",
     "\n",
-    "    evaluator_TTT.update(instance.y(),prediction)\n",
-    "    evaluator_windowed.update(instance.y(),prediction)\n",
+    "    evaluator_TTT.update(instance.y_value, prediction)\n",
+    "    evaluator_windowed.update(instance.y_value, prediction)\n",
     "    learner.train(instance)\n",
     "    \n",
     "    instancesProcessed += 1\n",
@@ -2977,7 +3060,14 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "12d26af5-ccfe-4274-a4b6-2a6cb3e24878",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-29T01:28:36.056999Z",
+     "iopub.status.busy": "2024-02-29T01:28:36.056398Z",
+     "iopub.status.idle": "2024-02-29T01:28:38.689392Z",
+     "shell.execute_reply": "2024-02-29T01:28:38.688800Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3107,8 +3197,8 @@
     "\n",
     "    prediction = learner.predict(instance)\n",
     "    \n",
-    "    evaluator_TTT.update(instance.y(),prediction)\n",
-    "    evaluator_windowed.update(instance.y(),prediction)\n",
+    "    evaluator_TTT.update(instance.y_value, prediction)\n",
+    "    evaluator_windowed.update(instance.y_value, prediction)\n",
     "    learner.train(instance)\n",
     "    \n",
     "    instancesProcessed += 1\n",
@@ -3146,7 +3236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
