--- a/notebooks/Classification_Evaluator_Examples.ipynb
+++ b/notebooks/Classification_Evaluator_Examples.ipynb
@@ -19,10 +19,10 @@
    "id": "f6c3fc32-efa6-4238-a6f6-7e84aed4973d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T02:03:42.929082Z",
-     "iopub.status.busy": "2024-02-22T02:03:42.928365Z",
-     "iopub.status.idle": "2024-02-22T02:03:43.935221Z",
-     "shell.execute_reply": "2024-02-22T02:03:43.933935Z"
+     "iopub.execute_input": "2024-02-29T01:28:17.526967Z",
+     "iopub.status.busy": "2024-02-29T01:28:17.526761Z",
+     "iopub.status.idle": "2024-02-29T01:28:19.967631Z",
+     "shell.execute_reply": "2024-02-29T01:28:19.967035Z"
     }
    },
    "outputs": [
@@ -68,10 +68,10 @@
    "id": "195b466e-c3c5-4288-81db-4fd562798011",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T02:03:43.940077Z",
-     "iopub.status.busy": "2024-02-22T02:03:43.939680Z",
-     "iopub.status.idle": "2024-02-22T02:03:43.946756Z",
-     "shell.execute_reply": "2024-02-22T02:03:43.945862Z"
+     "iopub.execute_input": "2024-02-29T01:28:19.972696Z",
+     "iopub.status.busy": "2024-02-29T01:28:19.970497Z",
+     "iopub.status.idle": "2024-02-29T01:28:19.988028Z",
+     "shell.execute_reply": "2024-02-29T01:28:19.987481Z"
     }
    },
    "outputs": [
@@ -107,10 +107,10 @@
    "id": "29b0a5d9-1f26-4dbe-bb39-158d9521e90c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T02:03:43.950812Z",
-     "iopub.status.busy": "2024-02-22T02:03:43.950436Z",
-     "iopub.status.idle": "2024-02-22T02:03:43.967800Z",
-     "shell.execute_reply": "2024-02-22T02:03:43.966917Z"
+     "iopub.execute_input": "2024-02-29T01:28:19.990664Z",
+     "iopub.status.busy": "2024-02-29T01:28:19.990431Z",
+     "iopub.status.idle": "2024-02-29T01:28:20.026452Z",
+     "shell.execute_reply": "2024-02-29T01:28:20.021371Z"
     }
    },
    "outputs": [
@@ -161,10 +161,10 @@
    "id": "dd73c09c-0e2f-4adc-90bf-25c85adc5305",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T02:03:43.972047Z",
-     "iopub.status.busy": "2024-02-22T02:03:43.971453Z",
-     "iopub.status.idle": "2024-02-22T02:03:43.979211Z",
-     "shell.execute_reply": "2024-02-22T02:03:43.978344Z"
+     "iopub.execute_input": "2024-02-29T01:28:20.030525Z",
+     "iopub.status.busy": "2024-02-29T01:28:20.029197Z",
+     "iopub.status.idle": "2024-02-29T01:28:20.039726Z",
+     "shell.execute_reply": "2024-02-29T01:28:20.039114Z"
     }
    },
    "outputs": [
@@ -209,10 +209,10 @@
    "id": "64458fd0-1f88-48c2-a532-b19b48ce9472",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T02:03:43.983242Z",
-     "iopub.status.busy": "2024-02-22T02:03:43.982905Z",
-     "iopub.status.idle": "2024-02-22T02:03:43.990637Z",
-     "shell.execute_reply": "2024-02-22T02:03:43.989773Z"
+     "iopub.execute_input": "2024-02-29T01:28:20.047462Z",
+     "iopub.status.busy": "2024-02-29T01:28:20.046183Z",
+     "iopub.status.idle": "2024-02-29T01:28:20.063550Z",
+     "shell.execute_reply": "2024-02-29T01:28:20.062746Z"
     }
    },
    "outputs": [
@@ -257,10 +257,10 @@
    "id": "6ea3c19f-4ef8-4289-9af0-9949936c1f77",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T02:03:43.994646Z",
-     "iopub.status.busy": "2024-02-22T02:03:43.994275Z",
-     "iopub.status.idle": "2024-02-22T02:03:44.002772Z",
-     "shell.execute_reply": "2024-02-22T02:03:44.001857Z"
+     "iopub.execute_input": "2024-02-29T01:28:20.066399Z",
+     "iopub.status.busy": "2024-02-29T01:28:20.066131Z",
+     "iopub.status.idle": "2024-02-29T01:28:20.090515Z",
+     "shell.execute_reply": "2024-02-29T01:28:20.086079Z"
     }
    },
    "outputs": [
@@ -305,10 +305,10 @@
    "id": "dcd3a902-6271-463d-a4fc-04f04bb1a723",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T02:03:44.007227Z",
-     "iopub.status.busy": "2024-02-22T02:03:44.006688Z",
-     "iopub.status.idle": "2024-02-22T02:03:44.015698Z",
-     "shell.execute_reply": "2024-02-22T02:03:44.014743Z"
+     "iopub.execute_input": "2024-02-29T01:28:20.140459Z",
+     "iopub.status.busy": "2024-02-29T01:28:20.140227Z",
+     "iopub.status.idle": "2024-02-29T01:28:20.153963Z",
+     "shell.execute_reply": "2024-02-29T01:28:20.153324Z"
     }
    },
    "outputs": [
@@ -359,10 +359,10 @@
    "id": "b3741d4b-46fb-44f8-9adc-4c4734f0733d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T02:03:44.020309Z",
-     "iopub.status.busy": "2024-02-22T02:03:44.019877Z",
-     "iopub.status.idle": "2024-02-22T02:03:44.030464Z",
-     "shell.execute_reply": "2024-02-22T02:03:44.029268Z"
+     "iopub.execute_input": "2024-02-29T01:28:20.156773Z",
+     "iopub.status.busy": "2024-02-29T01:28:20.156573Z",
+     "iopub.status.idle": "2024-02-29T01:28:20.170868Z",
+     "shell.execute_reply": "2024-02-29T01:28:20.170383Z"
     }
    },
    "outputs": [
@@ -412,10 +412,10 @@
    "id": "c24c1547-371a-47d3-adbd-f873bd4e461e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T02:03:44.035440Z",
-     "iopub.status.busy": "2024-02-22T02:03:44.034790Z",
-     "iopub.status.idle": "2024-02-22T02:03:44.045373Z",
-     "shell.execute_reply": "2024-02-22T02:03:44.044368Z"
+     "iopub.execute_input": "2024-02-29T01:28:20.179966Z",
+     "iopub.status.busy": "2024-02-29T01:28:20.179737Z",
+     "iopub.status.idle": "2024-02-29T01:28:20.190377Z",
+     "shell.execute_reply": "2024-02-29T01:28:20.189868Z"
     }
    },
    "outputs": [
@@ -460,10 +460,10 @@
    "id": "6f940410-8866-448c-825c-5e06ba61ed54",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T02:03:44.050002Z",
-     "iopub.status.busy": "2024-02-22T02:03:44.049529Z",
-     "iopub.status.idle": "2024-02-22T02:03:44.062685Z",
-     "shell.execute_reply": "2024-02-22T02:03:44.061612Z"
+     "iopub.execute_input": "2024-02-29T01:28:20.197018Z",
+     "iopub.status.busy": "2024-02-29T01:28:20.196796Z",
+     "iopub.status.idle": "2024-02-29T01:28:20.212863Z",
+     "shell.execute_reply": "2024-02-29T01:28:20.212234Z"
     }
    },
    "outputs": [
@@ -506,10 +506,10 @@
    "id": "0b1b7972-5175-40a3-97bc-edd29aeabe8d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T02:03:44.067311Z",
-     "iopub.status.busy": "2024-02-22T02:03:44.066825Z",
-     "iopub.status.idle": "2024-02-22T02:03:44.081779Z",
-     "shell.execute_reply": "2024-02-22T02:03:44.080679Z"
+     "iopub.execute_input": "2024-02-29T01:28:20.222968Z",
+     "iopub.status.busy": "2024-02-29T01:28:20.215969Z",
+     "iopub.status.idle": "2024-02-29T01:28:20.247016Z",
+     "shell.execute_reply": "2024-02-29T01:28:20.246476Z"
     }
    },
    "outputs": [
@@ -518,7 +518,13 @@
      "output_type": "stream",
      "text": [
       "['classified instances', 'classifications correct (percent)', 'Kappa Statistic (percent)', 'Kappa Temporal Statistic (percent)', 'Kappa M Statistic (percent)', 'F1 Score (percent)', 'F1 Score for class 0 (percent)', 'F1 Score for class 1 (percent)', 'F1 Score for class 2 (percent)', 'Precision (percent)', 'Precision for class 0 (percent)', 'Precision for class 1 (percent)', 'Precision for class 2 (percent)', 'Recall (percent)', 'Recall for class 0 (percent)', 'Recall for class 1 (percent)', 'Recall for class 2 (percent)']\n",
-      "[10.0, 30.0, 10.25641025641025, -40.0, -16.666666666666675, nan, 36.36363636363636, 40.0, nan, nan, 22.22222222222222, 100.0, nan, 41.66666666666667, 100.0, 25.0, 0.0]\n",
+      "[10.0, 30.0, 10.25641025641025, -40.0, -16.666666666666675, nan, 36.36363636363636, 40.0, nan, nan, 22.22222222222222, 100.0, nan, 41.66666666666667, 100.0, 25.0, 0.0]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "30.0\n"
      ]
     }
@@ -560,10 +566,10 @@
    "id": "a1a3f50c-fa77-4bdc-8105-597512670034",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T02:03:44.086381Z",
-     "iopub.status.busy": "2024-02-22T02:03:44.085910Z",
-     "iopub.status.idle": "2024-02-22T02:03:44.116809Z",
-     "shell.execute_reply": "2024-02-22T02:03:44.115905Z"
+     "iopub.execute_input": "2024-02-29T01:28:20.249786Z",
+     "iopub.status.busy": "2024-02-29T01:28:20.249547Z",
+     "iopub.status.idle": "2024-02-29T01:28:20.330791Z",
+     "shell.execute_reply": "2024-02-29T01:28:20.330010Z"
     }
    },
    "outputs": [
@@ -778,10 +784,10 @@
    "id": "73b739b9-60dc-4975-afb9-5d74e8abad99",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T02:03:44.121535Z",
-     "iopub.status.busy": "2024-02-22T02:03:44.121139Z",
-     "iopub.status.idle": "2024-02-22T02:03:44.142154Z",
-     "shell.execute_reply": "2024-02-22T02:03:44.141280Z"
+     "iopub.execute_input": "2024-02-29T01:28:20.333638Z",
+     "iopub.status.busy": "2024-02-29T01:28:20.333399Z",
+     "iopub.status.idle": "2024-02-29T01:28:20.376644Z",
+     "shell.execute_reply": "2024-02-29T01:28:20.376076Z"
     }
    },
    "outputs": [
@@ -957,10 +963,10 @@
    "id": "eb7c4331-b390-423d-b645-3cbae4752950",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T02:03:44.146715Z",
-     "iopub.status.busy": "2024-02-22T02:03:44.146487Z",
-     "iopub.status.idle": "2024-02-22T02:03:46.198978Z",
-     "shell.execute_reply": "2024-02-22T02:03:46.197892Z"
+     "iopub.execute_input": "2024-02-29T01:28:20.379579Z",
+     "iopub.status.busy": "2024-02-29T01:28:20.379373Z",
+     "iopub.status.idle": "2024-02-29T01:28:25.680303Z",
+     "shell.execute_reply": "2024-02-29T01:28:25.679619Z"
     }
    },
    "outputs": [
@@ -1240,10 +1246,10 @@
    "id": "9f202299-317d-45db-a62d-747769a958a8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-22T02:03:46.203406Z",
-     "iopub.status.busy": "2024-02-22T02:03:46.203092Z",
-     "iopub.status.idle": "2024-02-22T02:03:47.319098Z",
-     "shell.execute_reply": "2024-02-22T02:03:47.318065Z"
+     "iopub.execute_input": "2024-02-29T01:28:25.683364Z",
+     "iopub.status.busy": "2024-02-29T01:28:25.683097Z",
+     "iopub.status.idle": "2024-02-29T01:28:29.027715Z",
+     "shell.execute_reply": "2024-02-29T01:28:29.027083Z"
     }
    },
    "outputs": [
