--- a/notebooks/Preprocessing.ipynb
+++ b/notebooks/Preprocessing.ipynb
@@ -34,10 +34,10 @@
    "id": "3b7be7ed-97d2-437a-9ed9-fb71e4f33328",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T22:00:01.466703Z",
-     "iopub.status.busy": "2024-01-10T22:00:01.466543Z",
-     "iopub.status.idle": "2024-01-10T22:00:02.926942Z",
-     "shell.execute_reply": "2024-01-10T22:00:02.926449Z"
+     "iopub.execute_input": "2024-02-29T01:30:04.643630Z",
+     "iopub.status.busy": "2024-02-29T01:30:04.643482Z",
+     "iopub.status.idle": "2024-02-29T01:30:07.324122Z",
+     "shell.execute_reply": "2024-02-29T01:30:07.323449Z"
     }
    },
    "outputs": [
@@ -46,31 +46,43 @@
      "output_type": "stream",
      "text": [
       "capymoa_root: /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa\n",
-      "MOA jar path location (config.ini): jar/moa.jar\n",
+      "MOA jar path location (config.ini): /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa/jar/moa.jar\n",
       "JVM Location (system): \n",
       "JAVA_HOME: /usr/lib/jvm/java-17-openjdk\n",
-      "JVM args: ['-Xmx8g', '-Xss10M']\n",
-      "Sucessfully started the JVM and added MOA jar to the class path\n",
-      "x: [0.       0.056443 0.439155 0.003467 0.422915 0.414912], y: 1.0\n",
-      "x: [0.021277 0.051699 0.415055 0.003467 0.422915 0.414912], y: 1.0\n",
-      "x: [0.042553 0.051489 0.385004 0.003467 0.422915 0.414912], y: 1.0\n",
-      "x: [0.06383  0.045485 0.314639 0.003467 0.422915 0.414912], y: 1.0\n",
-      "x: [0.085106 0.042482 0.251116 0.003467 0.422915 0.414912], y: 0.0\n",
-      "x: [0.106383 0.041161 0.207528 0.003467 0.422915 0.414912], y: 0.0\n",
-      "x: [0.12766  0.041161 0.171824 0.003467 0.422915 0.414912], y: 0.0\n",
-      "x: [0.148936 0.041161 0.152782 0.003467 0.422915 0.414912], y: 0.0\n",
-      "x: [0.170213 0.041161 0.13493  0.003467 0.422915 0.414912], y: 0.0\n",
-      "x: [0.191489 0.041161 0.140583 0.003467 0.422915 0.414912], y: 0.0\n",
-      "x: [0.212766 0.044374 0.168997 0.003467 0.422915 0.414912], y: 1.0\n",
-      "x: [0.234043 0.049868 0.212437 0.003467 0.422915 0.414912], y: 1.0\n",
-      "x: [0.255319 0.051489 0.298721 0.003467 0.422915 0.414912], y: 1.0\n",
-      "x: [0.276596 0.042482 0.39036  0.003467 0.422915 0.414912], y: 0.0\n",
-      "x: [0.297872 0.040861 0.402261 0.003467 0.422915 0.414912], y: 0.0\n",
-      "x: [0.319149 0.040711 0.462214 0.003467 0.422915 0.414912], y: 0.0\n",
-      "x: [0.340426 0.040861 0.488248 0.003467 0.422915 0.414912], y: 0.0\n",
-      "x: [0.361702 0.040711 0.493306 0.003467 0.422915 0.414912], y: 0.0\n",
-      "x: [0.382979 0.041041 0.53258  0.003467 0.422915 0.414912], y: 0.0\n",
-      "x: [0.404255 0.041161 0.546415 0.003467 0.422915 0.414912], y: 0.0\n"
+      "JVM args: ['-Xmx8g', '-Xss10M']\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sucessfully started the JVM and added MOA jar to the class path\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: [0.       0.056443 0.439155 0.003467 0.422915 0.414912], y: 1\n",
+      "x: [0.021277 0.051699 0.415055 0.003467 0.422915 0.414912], y: 1\n",
+      "x: [0.042553 0.051489 0.385004 0.003467 0.422915 0.414912], y: 1\n",
+      "x: [0.06383  0.045485 0.314639 0.003467 0.422915 0.414912], y: 1\n",
+      "x: [0.085106 0.042482 0.251116 0.003467 0.422915 0.414912], y: 0\n",
+      "x: [0.106383 0.041161 0.207528 0.003467 0.422915 0.414912], y: 0\n",
+      "x: [0.12766  0.041161 0.171824 0.003467 0.422915 0.414912], y: 0\n",
+      "x: [0.148936 0.041161 0.152782 0.003467 0.422915 0.414912], y: 0\n",
+      "x: [0.170213 0.041161 0.13493  0.003467 0.422915 0.414912], y: 0\n",
+      "x: [0.191489 0.041161 0.140583 0.003467 0.422915 0.414912], y: 0\n",
+      "x: [0.212766 0.044374 0.168997 0.003467 0.422915 0.414912], y: 1\n",
+      "x: [0.234043 0.049868 0.212437 0.003467 0.422915 0.414912], y: 1\n",
+      "x: [0.255319 0.051489 0.298721 0.003467 0.422915 0.414912], y: 1\n",
+      "x: [0.276596 0.042482 0.39036  0.003467 0.422915 0.414912], y: 0\n",
+      "x: [0.297872 0.040861 0.402261 0.003467 0.422915 0.414912], y: 0\n",
+      "x: [0.319149 0.040711 0.462214 0.003467 0.422915 0.414912], y: 0\n",
+      "x: [0.340426 0.040861 0.488248 0.003467 0.422915 0.414912], y: 0\n",
+      "x: [0.361702 0.040711 0.493306 0.003467 0.422915 0.414912], y: 0\n",
+      "x: [0.382979 0.041041 0.53258  0.003467 0.422915 0.414912], y: 0\n",
+      "x: [0.404255 0.041161 0.546415 0.003467 0.422915 0.414912], y: 0\n"
      ]
     }
    ],
@@ -87,7 +99,7 @@
     "while elec_stream.has_more_instances():\n",
     "    instance = elec_stream.next_instance()\n",
     "    if i < 20: # prevent printing all the instances\n",
-    "        print(f'x: {instance.x()}, y: {instance.y()}')\n",
+    "        print(f'x: {instance.x}, y: {instance.y_label}')\n",
     "    i+=1"
    ]
   },
@@ -97,10 +109,10 @@
    "id": "38d831be-3560-4efd-89bd-1ec71f001833",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T22:00:02.928840Z",
-     "iopub.status.busy": "2024-01-10T22:00:02.928678Z",
-     "iopub.status.idle": "2024-01-10T22:00:02.932936Z",
-     "shell.execute_reply": "2024-01-10T22:00:02.932616Z"
+     "iopub.execute_input": "2024-02-29T01:30:07.327257Z",
+     "iopub.status.busy": "2024-02-29T01:30:07.327000Z",
+     "iopub.status.idle": "2024-02-29T01:30:07.332626Z",
+     "shell.execute_reply": "2024-02-29T01:30:07.332174Z"
     }
    },
    "outputs": [
@@ -125,7 +137,7 @@
    ],
    "source": [
     "# Getting some extra information about the instance through the MOA representation. \n",
-    "moa_instance = instance.get_MOA_InstanceExample().getData()\n",
+    "moa_instance = instance.java_instance.getData()\n",
     "\n",
     "for i in range(0, moa_instance.numInputAttributes()):\n",
     "    print(moa_instance.attribute(i))\n",
@@ -157,10 +169,10 @@
    "id": "14681f54-23a1-4f93-9145-abf484c91c54",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T22:00:02.934886Z",
-     "iopub.status.busy": "2024-01-10T22:00:02.934616Z",
-     "iopub.status.idle": "2024-01-10T22:00:05.078856Z",
-     "shell.execute_reply": "2024-01-10T22:00:05.078400Z"
+     "iopub.execute_input": "2024-02-29T01:30:07.336579Z",
+     "iopub.status.busy": "2024-02-29T01:30:07.336394Z",
+     "iopub.status.idle": "2024-02-29T01:30:11.536499Z",
+     "shell.execute_reply": "2024-02-29T01:30:11.536020Z"
     }
    },
    "outputs": [
@@ -193,7 +205,7 @@
     "    instance = elec_stream.next_instance()\n",
     "    \n",
     "    prediction = ob_learner.predict(instance)\n",
-    "    ob_evaluator.update(instance.y(), prediction)\n",
+    "    ob_evaluator.update(instance.y_label, prediction)\n",
     "    ob_learner.train(instance)\n",
     "\n",
     "ob_evaluator.accuracy()"
@@ -215,10 +227,10 @@
    "id": "f6fb628f-aefc-4bf1-8322-a175a16170e4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T22:00:05.080800Z",
-     "iopub.status.busy": "2024-01-10T22:00:05.080669Z",
-     "iopub.status.idle": "2024-01-10T22:00:05.082987Z",
-     "shell.execute_reply": "2024-01-10T22:00:05.082529Z"
+     "iopub.execute_input": "2024-02-29T01:30:11.539947Z",
+     "iopub.status.busy": "2024-02-29T01:30:11.539676Z",
+     "iopub.status.idle": "2024-02-29T01:30:11.542829Z",
+     "shell.execute_reply": "2024-02-29T01:30:11.542377Z"
     }
    },
    "outputs": [],
@@ -233,10 +245,10 @@
    "id": "ae9bb646-e0d1-4de6-b5a1-cff0f0a1b172",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T22:00:05.084863Z",
-     "iopub.status.busy": "2024-01-10T22:00:05.084628Z",
-     "iopub.status.idle": "2024-01-10T22:00:06.405719Z",
-     "shell.execute_reply": "2024-01-10T22:00:06.405244Z"
+     "iopub.execute_input": "2024-02-29T01:30:11.547884Z",
+     "iopub.status.busy": "2024-02-29T01:30:11.547704Z",
+     "iopub.status.idle": "2024-02-29T01:30:14.246440Z",
+     "shell.execute_reply": "2024-02-29T01:30:14.246036Z"
     }
    },
    "outputs": [
@@ -272,9 +284,9 @@
     "    instance = elec_stream_normalised.next_instance()\n",
     "    \n",
     "    prediction = ob_learner.predict(instance)\n",
-    "    ob_evaluator.update(instance.y(), prediction)\n",
+    "    ob_evaluator.update(instance.y_label, prediction)\n",
     "    ob_learner.train(instance)\n",
-    "    # print(instance.x())\n",
+    "    # print(instance.x)\n",
     "\n",
     "ob_evaluator.accuracy()"
    ]
@@ -304,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
