--- a/notebooks/Simple_NeuralNetwork.ipynb
+++ b/notebooks/Simple_NeuralNetwork.ipynb
@@ -33,10 +33,10 @@
      "start_time": "2023-12-03T08:38:57.307505Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-02-22T02:03:48.570399Z",
-     "iopub.status.busy": "2024-02-22T02:03:48.569619Z",
-     "iopub.status.idle": "2024-02-22T02:03:49.387808Z",
-     "shell.execute_reply": "2024-02-22T02:03:49.386686Z"
+     "iopub.execute_input": "2024-02-29T01:30:24.133092Z",
+     "iopub.status.busy": "2024-02-29T01:30:24.132801Z",
+     "iopub.status.idle": "2024-02-29T01:30:24.768215Z",
+     "shell.execute_reply": "2024-02-29T01:30:24.767466Z"
     }
    },
    "outputs": [
@@ -48,13 +48,7 @@
       "MOA jar path location (config.ini): /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa/jar/moa.jar\n",
       "JVM Location (system): \n",
       "JAVA_HOME: /usr/lib/jvm/java-17-openjdk\n",
-      "JVM args: ['-Xmx8g', '-Xss10M']\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "JVM args: ['-Xmx8g', '-Xss10M']\n",
       "Sucessfully started the JVM and added MOA jar to the class path\n"
      ]
     },
@@ -99,7 +93,7 @@
     "while elec_stream.has_more_instances():\n",
     "    instance = elec_stream.next_instance()\n",
     "    if i < 20: # prevent printing all the instances\n",
-    "        print(f'x: {instance.x()}, y: {instance.y()}')\n",
+    "        print(f'x: {instance.x}, y: {instance.y_label}')\n",
     "    i+=1"
    ]
   },
@@ -113,10 +107,10 @@
      "start_time": "2023-12-03T08:39:01.477002Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-02-22T02:03:49.391840Z",
-     "iopub.status.busy": "2024-02-22T02:03:49.391537Z",
-     "iopub.status.idle": "2024-02-22T02:03:49.399303Z",
-     "shell.execute_reply": "2024-02-22T02:03:49.398473Z"
+     "iopub.execute_input": "2024-02-29T01:30:24.770554Z",
+     "iopub.status.busy": "2024-02-29T01:30:24.770307Z",
+     "iopub.status.idle": "2024-02-29T01:30:24.775271Z",
+     "shell.execute_reply": "2024-02-29T01:30:24.774913Z"
     }
    },
    "outputs": [
@@ -143,7 +137,7 @@
    ],
    "source": [
     "# Getting some extra information about the instance through the MOA representation. \n",
-    "moa_instance = instance.get_MOA_InstanceExample().getData()\n",
+    "moa_instance = instance.java_instance.getData()\n",
     "print(f'Number of classes: {moa_instance.numClasses()}')\n",
     "print(f'Number of features/attributes: {moa_instance.numInputAttributes()}')\n",
     "\n",
@@ -178,10 +172,10 @@
     },
     "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2024-02-22T02:03:49.403309Z",
-     "iopub.status.busy": "2024-02-22T02:03:49.403048Z",
-     "iopub.status.idle": "2024-02-22T02:03:50.638799Z",
-     "shell.execute_reply": "2024-02-22T02:03:50.637131Z"
+     "iopub.execute_input": "2024-02-29T01:30:24.777010Z",
+     "iopub.status.busy": "2024-02-29T01:30:24.776865Z",
+     "iopub.status.idle": "2024-02-29T01:30:25.583717Z",
+     "shell.execute_reply": "2024-02-29T01:30:25.583211Z"
     }
    },
    "outputs": [
@@ -236,10 +230,10 @@
     },
     "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2024-02-22T02:03:50.645058Z",
-     "iopub.status.busy": "2024-02-22T02:03:50.644241Z",
-     "iopub.status.idle": "2024-02-22T02:03:55.466245Z",
-     "shell.execute_reply": "2024-02-22T02:03:55.465470Z"
+     "iopub.execute_input": "2024-02-29T01:30:25.586087Z",
+     "iopub.status.busy": "2024-02-29T01:30:25.585566Z",
+     "iopub.status.idle": "2024-02-29T01:30:30.230740Z",
+     "shell.execute_reply": "2024-02-29T01:30:30.230222Z"
     }
    },
    "outputs": [
@@ -263,29 +257,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy at 500 : 53.400000000000006\n"
+      "Accuracy at 500 : 54.800000000000004\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy at 1000 : 59.199999999999996\n"
+      "Accuracy at 1000 : 60.199999999999996\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy at 1500 : 64.33333333333333\n"
+      "Accuracy at 1500 : 65.06666666666666\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy at 2000 : 63.449999999999996\n",
-      "Accuracy at 2000 : 63.449999999999996\n"
+      "Accuracy at 2000 : 64.0\n",
+      "Accuracy at 2000 : 64.0\n"
      ]
     }
    ],
@@ -302,15 +296,15 @@
     "    i += 1\n",
     "    instance = elec_stream.next_instance()\n",
     "    if model is None:\n",
-    "        moa_instance = instance.get_MOA_InstanceExample().getData()\n",
+    "        moa_instance = instance.java_instance.getData()\n",
     "        # initialize the model and send it to the device\n",
     "        model = NeuralNetwork(input_size=moa_instance.numInputAttributes(), number_of_classes=moa_instance.numClasses()).to(device)\n",
     "        # set the optimizer\n",
     "        optimizer = torch.optim.SGD(model.parameters(), lr=1e-3)\n",
     "        print(model)\n",
     "    \n",
-    "    X = torch.tensor(instance.x(), dtype=torch.float32)\n",
-    "    y = torch.tensor(instance.y_index(), dtype=torch.long)\n",
+    "    X = torch.tensor(instance.x, dtype=torch.float32)\n",
+    "    y = torch.tensor(instance.y_index, dtype=torch.long)\n",
     "    # set the device and add a dimension to the tensor\n",
     "    X, y = torch.unsqueeze(X.to(device), 0), torch.unsqueeze(y.to(device),0) \n",
     "    \n",
@@ -320,7 +314,7 @@
     "        prediction = torch.argmax(pred)\n",
     "\n",
     "    # update evaluator with predicted class\n",
-    "    evaluator.update(instance.y(), instance.schema.get_value_for_index(prediction))\n",
+    "    evaluator.update(instance.y_label, instance.schema.get_value_for_index(prediction))\n",
     "  \n",
     "    # Compute prediction error\n",
     "    pred = model(X)\n",
@@ -391,25 +385,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "e87c2180",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-29T01:30:30.233033Z",
+     "iopub.status.busy": "2024-02-29T01:30:30.232637Z",
+     "iopub.status.idle": "2024-02-29T01:30:31.564698Z",
+     "shell.execute_reply": "2024-02-29T01:30:31.564060Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: tensorboard in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (2.16.2)\n",
-      "Requirement already satisfied: absl-py>=0.4 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (2.1.0)\n",
-      "Requirement already satisfied: grpcio>=1.48.2 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (1.62.0)\n",
-      "Requirement already satisfied: markdown>=2.6.8 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (3.5.2)\n",
-      "Requirement already satisfied: numpy>=1.12.0 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (1.26.4)\n",
-      "Requirement already satisfied: protobuf!=4.24.0,>=3.19.6 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (4.25.3)\n",
-      "Requirement already satisfied: setuptools>=41.0.0 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (68.2.2)\n",
-      "Requirement already satisfied: six>1.9 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (1.16.0)\n",
-      "Requirement already satisfied: tensorboard-data-server<0.8.0,>=0.7.0 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (0.7.2)\n",
-      "Requirement already satisfied: werkzeug>=1.0.1 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (3.0.1)\n",
-      "Requirement already satisfied: MarkupSafe>=2.1.1 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from werkzeug>=1.0.1->tensorboard) (2.1.5)\n"
+      "Requirement already satisfied: tensorboard in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (2.16.2)\r\n",
+      "Requirement already satisfied: absl-py>=0.4 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (2.1.0)\r\n",
+      "Requirement already satisfied: grpcio>=1.48.2 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (1.62.0)\r\n",
+      "Requirement already satisfied: markdown>=2.6.8 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (3.5.2)\r\n",
+      "Requirement already satisfied: numpy>=1.12.0 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (1.26.4)\r\n",
+      "Requirement already satisfied: protobuf!=4.24.0,>=3.19.6 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (4.25.3)\r\n",
+      "Requirement already satisfied: setuptools>=41.0.0 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (68.2.2)\r\n",
+      "Requirement already satisfied: six>1.9 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (1.16.0)\r\n",
+      "Requirement already satisfied: tensorboard-data-server<0.8.0,>=0.7.0 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (0.7.2)\r\n",
+      "Requirement already satisfied: werkzeug>=1.0.1 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (3.0.1)\r\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: MarkupSafe>=2.1.1 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from werkzeug>=1.0.1->tensorboard) (2.1.5)\r\n"
      ]
     }
    ],
@@ -419,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8ec688a5b4af052f",
    "metadata": {
     "ExecuteTime": {
@@ -428,10 +435,10 @@
     },
     "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2024-02-22T02:03:55.469141Z",
-     "iopub.status.busy": "2024-02-22T02:03:55.468680Z",
-     "iopub.status.idle": "2024-02-22T02:03:55.527741Z",
-     "shell.execute_reply": "2024-02-22T02:03:55.526802Z"
+     "iopub.execute_input": "2024-02-29T01:30:31.566764Z",
+     "iopub.status.busy": "2024-02-29T01:30:31.566604Z",
+     "iopub.status.idle": "2024-02-29T01:30:31.621180Z",
+     "shell.execute_reply": "2024-02-29T01:30:31.620621Z"
     }
    },
    "outputs": [],
@@ -453,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "b5d0d6dd10dacc37",
    "metadata": {
     "ExecuteTime": {
@@ -462,10 +469,10 @@
     },
     "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2024-02-22T02:03:55.532078Z",
-     "iopub.status.busy": "2024-02-22T02:03:55.531794Z",
-     "iopub.status.idle": "2024-02-22T02:03:59.139893Z",
-     "shell.execute_reply": "2024-02-22T02:03:59.138040Z"
+     "iopub.execute_input": "2024-02-29T01:30:31.623248Z",
+     "iopub.status.busy": "2024-02-29T01:30:31.622947Z",
+     "iopub.status.idle": "2024-02-29T01:30:35.599568Z",
+     "shell.execute_reply": "2024-02-29T01:30:35.599128Z"
     }
    },
    "outputs": [
@@ -473,28 +480,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy at 500 : 54.6\n"
+      "Accuracy at 500 : 55.00000000000001\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy at 1000 : 60.8\n"
+      "Accuracy at 1000 : 60.9\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy at 1500 : 65.60000000000001\n"
+      "Accuracy at 1500 : 65.8\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy at 2000 : 64.45\n"
+      "Accuracy at 2000 : 64.64999999999999\n"
      ]
     }
    ],
@@ -511,15 +518,15 @@
     "    i += 1\n",
     "    instance = elec_stream.next_instance()\n",
     "    if model is None:\n",
-    "        moa_instance = instance.get_MOA_InstanceExample().getData()\n",
+    "        moa_instance = instance.java_instance.getData()\n",
     "        # initialize the model and send it to the device\n",
     "        model = NeuralNetwork(input_size=moa_instance.numInputAttributes(), number_of_classes=moa_instance.numClasses()).to(device)\n",
     "        # set the optimizer\n",
     "        optimizer = torch.optim.SGD(model.parameters(), lr=1e-3)\n",
     "        print(model)\n",
     "    \n",
-    "    X = torch.tensor(instance.x(), dtype=torch.float32)\n",
-    "    y = torch.tensor(instance.y_index(), dtype=torch.long)\n",
+    "    X = torch.tensor(instance.x, dtype=torch.float32)\n",
+    "    y = torch.tensor(instance.y_index, dtype=torch.long)\n",
     "    # set the device and add a dimension to the tensor\n",
     "    X, y = torch.unsqueeze(X.to(device), 0), torch.unsqueeze(y.to(device),0) \n",
     "    \n",
@@ -529,7 +536,7 @@
     "        prediction = instance.schema.get_value_for_index(torch.argmax(pred))\n",
     "\n",
     "    # update evaluator with predicted class\n",
-    "    evaluator.update(instance.y(), prediction)\n",
+    "    evaluator.update(instance.y_label, prediction)\n",
     "  \n",
     "    # Compute prediction error\n",
     "    pred = model(X)\n",
@@ -563,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "b228ae7468b3e4f1",
    "metadata": {
     "ExecuteTime": {
@@ -572,10 +579,10 @@
     },
     "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2024-02-22T02:03:59.143196Z",
-     "iopub.status.busy": "2024-02-22T02:03:59.142818Z",
-     "iopub.status.idle": "2024-02-22T02:03:59.147030Z",
-     "shell.execute_reply": "2024-02-22T02:03:59.146358Z"
+     "iopub.execute_input": "2024-02-29T01:30:35.604319Z",
+     "iopub.status.busy": "2024-02-29T01:30:35.601578Z",
+     "iopub.status.idle": "2024-02-29T01:30:35.606732Z",
+     "shell.execute_reply": "2024-02-29T01:30:35.606245Z"
     }
    },
    "outputs": [],
