--- a/notebooks/Using_jpype_MOA_example.ipynb
+++ b/notebooks/Using_jpype_MOA_example.ipynb
@@ -18,13 +18,20 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "1e7fe1d7-21c6-40f7-b829-212a98889c83",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-29T01:28:30.047427Z",
+     "iopub.status.busy": "2024-02-29T01:28:30.047197Z",
+     "iopub.status.idle": "2024-02-29T01:28:30.057311Z",
+     "shell.execute_reply": "2024-02-29T01:28:30.056730Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "JAVA_HOME:  /Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n"
+      "JAVA_HOME:  /usr/lib/jvm/java-17-openjdk\n"
      ]
     }
    ],
@@ -41,7 +48,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "712b607a-a9ef-4441-a212-6f86e0af75c5",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-29T01:28:30.061606Z",
+     "iopub.status.busy": "2024-02-29T01:28:30.060178Z",
+     "iopub.status.idle": "2024-02-29T01:28:30.366968Z",
+     "shell.execute_reply": "2024-02-29T01:28:30.366336Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import jpype\n",
@@ -63,7 +77,14 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "61592628-0cd0-4b43-9e37-4fac3fb8ad03",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-29T01:28:30.369747Z",
+     "iopub.status.busy": "2024-02-29T01:28:30.369545Z",
+     "iopub.status.idle": "2024-02-29T01:28:30.392982Z",
+     "shell.execute_reply": "2024-02-29T01:28:30.392418Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -85,6 +106,12 @@
    "execution_count": 4,
    "id": "def73fba-7f72-4168-b621-1fc4b7c12a66",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-29T01:28:30.396150Z",
+     "iopub.status.busy": "2024-02-29T01:28:30.395663Z",
+     "iopub.status.idle": "2024-02-29T01:28:32.919768Z",
+     "shell.execute_reply": "2024-02-29T01:28:32.915025Z"
+    },
     "scrolled": true
    },
    "outputs": [
@@ -92,8 +119,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.46 s, sys: 1.86 s, total: 5.32 s\n",
-      "Wall time: 1.07 s\n"
+      "CPU times: user 5.18 s, sys: 341 ms, total: 5.52 s\n",
+      "Wall time: 2.49 s\n"
      ]
     },
     {
@@ -377,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
