--- a/notebooks/Creating_new_classifier.ipynb
+++ b/notebooks/Creating_new_classifier.ipynb
@@ -29,10 +29,10 @@
    "id": "fac5566f-a280-41b2-912d-005673ad429e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T21:40:47.008059Z",
-     "iopub.status.busy": "2024-01-10T21:40:47.007847Z",
-     "iopub.status.idle": "2024-01-10T21:40:47.014591Z",
-     "shell.execute_reply": "2024-01-10T21:40:47.014159Z"
+     "iopub.execute_input": "2024-02-29T01:28:17.599733Z",
+     "iopub.status.busy": "2024-02-29T01:28:17.599524Z",
+     "iopub.status.idle": "2024-02-29T01:28:17.609316Z",
+     "shell.execute_reply": "2024-02-29T01:28:17.608769Z"
     }
    },
    "outputs": [],
@@ -81,10 +81,10 @@
    "id": "3b7be7ed-97d2-437a-9ed9-fb71e4f33328",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T21:40:47.016542Z",
-     "iopub.status.busy": "2024-01-10T21:40:47.016410Z",
-     "iopub.status.idle": "2024-01-10T21:40:47.504266Z",
-     "shell.execute_reply": "2024-01-10T21:40:47.503586Z"
+     "iopub.execute_input": "2024-02-29T01:28:17.613580Z",
+     "iopub.status.busy": "2024-02-29T01:28:17.613341Z",
+     "iopub.status.idle": "2024-02-29T01:28:19.680089Z",
+     "shell.execute_reply": "2024-02-29T01:28:19.679183Z"
     }
    },
    "outputs": [
@@ -93,10 +93,16 @@
      "output_type": "stream",
      "text": [
       "capymoa_root: /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa\n",
-      "MOA jar path location (config.ini): jar/moa.jar\n",
+      "MOA jar path location (config.ini): /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa/jar/moa.jar\n",
       "JVM Location (system): \n",
       "JAVA_HOME: /usr/lib/jvm/java-17-openjdk\n",
-      "JVM args: ['-Xmx8g', '-Xss10M']\n",
+      "JVM args: ['-Xmx8g', '-Xss10M']\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Sucessfully started the JVM and added MOA jar to the class path\n"
      ]
     }
@@ -167,17 +173,17 @@
    "id": "da2bba35-c258-4fc0-8932-f97d56e4e276",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T21:40:47.507883Z",
-     "iopub.status.busy": "2024-01-10T21:40:47.507412Z",
-     "iopub.status.idle": "2024-01-10T21:40:52.552975Z",
-     "shell.execute_reply": "2024-01-10T21:40:52.552498Z"
+     "iopub.execute_input": "2024-02-29T01:28:19.684036Z",
+     "iopub.status.busy": "2024-02-29T01:28:19.682766Z",
+     "iopub.status.idle": "2024-02-29T01:28:31.656705Z",
+     "shell.execute_reply": "2024-02-29T01:28:31.656123Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "82.11731991525424"
+       "82.06435381355932"
       ]
      },
      "execution_count": 3,
@@ -218,10 +224,10 @@
    "id": "3da81297-af63-4d30-a643-81f347304efa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T21:40:52.554845Z",
-     "iopub.status.busy": "2024-01-10T21:40:52.554638Z",
-     "iopub.status.idle": "2024-01-10T21:40:56.273639Z",
-     "shell.execute_reply": "2024-01-10T21:40:56.273034Z"
+     "iopub.execute_input": "2024-02-29T01:28:31.659744Z",
+     "iopub.status.busy": "2024-02-29T01:28:31.659450Z",
+     "iopub.status.idle": "2024-02-29T01:28:37.756686Z",
+     "shell.execute_reply": "2024-02-29T01:28:37.753625Z"
     }
    },
    "outputs": [
@@ -229,9 +235,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NEW OB acc: 82.56091101694916\n",
-      "CPU times: user 3.86 s, sys: 24 ms, total: 3.89 s\n",
-      "Wall time: 3.71 s\n"
+      "NEW OB acc: 82.18573446327684\n",
+      "CPU times: user 5.63 s, sys: 37.3 ms, total: 5.67 s\n",
+      "Wall time: 6.08 s\n"
      ]
     }
    ],
@@ -258,7 +264,7 @@
     "    instance = elec_stream.next_instance()\n",
     "\n",
     "    prediction = NEW_OB.predict(instance)\n",
-    "    NEW_OB_evaluator.update(instance.y(), prediction)\n",
+    "    NEW_OB_evaluator.update(instance.y_label, prediction)\n",
     "    NEW_OB.train(instance)\n",
     "\n",
     "    i+=1\n",
@@ -283,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
